deployment/grc-claw-deployment/istio/egress-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-egressgateway
  namespace: grc-claw-ingress
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: ISTIO_MUTUAL
      hosts:
        - "*.grc-claw.internal"
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: external-services
  namespace: grc-claw-ingress
spec:
  hosts:
    - "vault.grc-claw.internal"
    - "postgresql.grc-claw.internal"
    - "redis.grc-claw.internal"
    - "kafka.grc-claw.internal"
    - "minio.grc-claw.internal"
    - "immudb.grc-claw.internal"
  location: MESH_INTERNAL
  ports:
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
